# OpenAPI-CodeGen-AI

./: README.md  open_api_codegen_prompt.md
Example_Results/: test.robot
Example_Results/PetStore2/: README.md  pyproject.toml
Example_Results/PetStore2/PetStore2Client/: __init__.py  basic.py  client.py
Example_Results/PetStore2/PetStore2Client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Example_Results/PetStore2/PetStore2Client/AI/: status.json
Example_Results/PetStore2/PetStore2Client/modules/: __init__.py  pet.py  store.py  user.py
